--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,16 @@
 					<warSourceDirectory>webapp</warSourceDirectory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://192.168.1.59/manager/text</url>
+					<path>/mysite3</path>
+					<username>admin</username>
+					<password>manager</password>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
